--- a/models/sources.yml
+++ b/models/sources.yml
@@ -10,3 +10,10 @@ sources:
             description: One record per customer.
           - name: orders
             description: One record per order. Includes cancelled and deleted orders.
+    - name: stripe
+      description: Stripe payment processing data
+      database: raw
+      schema: stripe
+      tables:
+        - name: payment
+          description: unique order id. Shows payment method, status, and amount, and date stamp of creation.  
