reconfigured source YAML files and added freshness tests

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -5,11 +5,18 @@ sources:
       description: This is a replica of the Postgres database used by our app
       database: raw
       schema: jaffle_shop
+      freshness:
+        warn_after: {count: 6, period: hour}
+        error_after: {count: 72, period: hour}
+      loaded_at_field: _etl_loaded_at
+      
       tables:
           - name: customers
             description: One record per customer.
+            freshness: null
           - name: orders
             description: One record per order. Includes cancelled and deleted orders.
+              
     - name: stripe
       description: Stripe payment processing data
       database: raw
