--- a/models/staging/jaffle_shop/source_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/source_jaffle_shop.yml
@@ -13,14 +13,18 @@ sources:
       tables:
           - name: customers
             description: One record per customer.
+            columns:
+              - name: id
+                tests:
+                  - unique
+                  - not_null
             freshness: null
+
           - name: orders
             description: One record per order. Includes cancelled and deleted orders.
+            columns:
+              - name: id
+                tests:
+                  - unique
+                  - not_null
               
-    - name: stripe
-      description: Stripe payment processing data
-      database: raw
-      schema: stripe
-      tables:
-        - name: payment
-          description: unique order id. Shows payment method, status, and amount, and date stamp of creation.  
