Added my first doc block, and cleaned up documentation

--- a/models/staging/jaffle_shop/jaffle_shop_models.yml
+++ b/models/staging/jaffle_shop/jaffle_shop_models.yml
@@ -2,7 +2,7 @@ version: 2
 
 models:
   - name: stg_customers
-    description: This model cleans up customer data
+    description: One unique customer per row. 
     columns:
       - name: customer_id
         description: Primary key
@@ -11,7 +11,7 @@ models:
           - not_null
 
   - name: stg_orders
-    description: This model cleans up order data
+    description: One order per row, customer ids can be duplicated as they order more than 1 order.
     columns:
       - name: order_id
         description: Primary key
@@ -19,6 +19,7 @@ models:
           - unique
           - not_null
       - name: status
+        description: "{{ doc('order_status')}}"
         tests:
           - accepted_values:
               values: ['placed', 'shipped', 'completed', 'return_pending', 'returned']
