--- a/models/staging/jaffle_shop/source_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/source_jaffle_shop.yml
@@ -12,7 +12,7 @@ sources:
       
       tables:
           - name: customers
-            description: One record per customer.
+            description: Raw customer data. 
             columns:
               - name: id
                 tests:
@@ -21,7 +21,7 @@ sources:
             freshness: null
 
           - name: orders
-            description: One record per order. Includes cancelled and deleted orders.
+            description: Raw orders data. 
             columns:
               - name: id
                 tests:
