--- a/models/staging/jaffle_shop/source_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/source_jaffle_shop.yml
@@ -5,10 +5,11 @@ sources:
       description: This is a replica of the Postgres database used by our app
       database: raw
       schema: jaffle_shop
-      freshness:
-        warn_after: {count: 6, period: hour}
-        error_after: {count: 72, period: hour}
-      loaded_at_field: _etl_loaded_at
+      config:
+        freshness:
+          warn_after: {count: 6, period: hour}
+          error_after: {count: 72, period: hour}
+          loaded_at_field: _etl_loaded_at
       
       tables:
           - name: customers
