--- a/models/staging/jaffle_shop/source_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/source_jaffle_shop.yml
@@ -7,8 +7,8 @@ sources:
       schema: jaffle_shop
       config:
         freshness:
-          warn_after: {count: 6, period: hour}
-          error_after: {count: 72, period: hour}
+          warn_after: {count: 24, period: hour}
+          error_after: {count: 5, period: day}
           loaded_at_field: _etl_loaded_at
       
       tables:
